--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "vue": "^2.6.10",
+    "vue-amap": "^0.5.10",
     "vue-preview": "^1.1.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
