--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.4",
+    "jsencrypt": "^3.0.0-rc.1",
     "mint-ui": "^2.2.13",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
