--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "build": "webpack -p"
   },
   "keywords": [],
   "author": "",
