--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.4",
+    "crypto-js": "^4.0.0",
+    "echarts": "^4.6.0",
+    "html2canvas": "^1.0.0-rc.5",
     "jsencrypt": "^3.0.0-rc.1",
     "mint-ui": "^2.2.13",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
+    "qrcodejs2": "0.0.2",
     "vue": "^2.6.10",
     "vue-amap": "^0.5.10",
-    "vue-preview": "^1.1.3",
+    "vue-echarts": "^5.0.0-beta.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
+    "vue-touch": "^2.0.0-beta.4",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
@@ -35,12 +38,12 @@
     "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.8.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server",
+    "dev": "webpack-dev-server --host 192.168.43.178",
     "build": "webpack -p"
   },
   "keywords": [],
