--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
+    "axios": "^0.19.2",
     "crypto-js": "^4.0.0",
     "echarts": "^4.6.0",
     "html2canvas": "^1.0.0-rc.5",
@@ -15,7 +16,6 @@
     "vue": "^2.6.10",
     "vue-amap": "^0.5.10",
     "vue-echarts": "^5.0.0-beta.0",
-    "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
     "vue-touch": "^2.0.0-beta.4",
     "vuex": "^3.1.1"
@@ -32,6 +32,7 @@
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "less-loader": "^5.0.0",
+    "qs": "^6.9.1",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "url-loader": "^2.2.0",
